--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head>
 	</head>
 	<body>
-		<video src="http://pb02.dmc.nico:2809/vod/ht2_nicovideo/nicovideo-so31429320_61a699faa3022cc2934546950b2d3e936db8de768346e89bd32250b196adcd33?ht2_nicovideo=69842147.8izxec_ou3jqd_1oij7mhu5w3m9">テスト</video>
+		<video src="http://pa04.dmc.nico:2811/vod/ht2_nicovideo/nicovideo-sm31176800_f742e11b6961deab92865522fa626007f5a351e9ceffcbcf7ca8c62ce0b8848c?ht2_nicovideo=69842147.4jp7zk_ou3jvo_ckyxquw6ax6z"></video>
 	</body>
 </html>
