--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head>
 	</head>
 	<body>
-		<video src="http://pa04.dmc.nico:2811/vod/ht2_nicovideo/nicovideo-sm31176800_f742e11b6961deab92865522fa626007f5a351e9ceffcbcf7ca8c62ce0b8848c?ht2_nicovideo=69842147.4jp7zk_ou3jvo_ckyxquw6ax6z"></video>
+		<video src="https://www.youtube.com/embed/k8-x6JUrHRU"></video>
 	</body>
 </html>
