--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head>
 	</head>
 	<body>
-		<video src="https://www.youtube.com/embed/k8-x6JUrHRU"></video>
+		<video src="blob:https://www.youtube.com/cf1fe2fc-4d43-45b5-86a6-a8d14264d194"></video>
 	</body>
 </html>
