--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<head>
 	</head>
 	<body>
-		<video src="blob:https://www.youtube.com/cf1fe2fc-4d43-45b5-86a6-a8d14264d194"></video>
+		<video src="http://pa04.dmc.nico:2808/vod/ht2_nicovideo/nicovideo-sm31208769_586ea6815597a95bcb0156bc604b97a7b7e17c0502484ec051c0807f7b24df49?ht2_nicovideo=69842147.ggbg6j_ou3k9k_1mx2qj10eoo43" autoplay></video>
 	</body>
 </html>
